Rolled back to previous state. Use 1.0.0 as baseline